fixing cards on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,9 @@ body {
 }
 @media only screen and (max-width: 600px) {
   .card {
-    width: 44rem;
+    box-shadow: none;
+    border: none;
+    height: 15vh;
   }
 }
 .card__img-box {
